--- a/index.css
+++ b/index.css
@@ -33,3 +33,26 @@ canvas {
     min-width: 80vh;
     min-height: 10vh;
 }
+
+.statusText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #aaaaaa;
+    font-size: 5rem;
+    margin: 0 auto;
+    padding: 0;
+    display: block;
+}
+
+.imgContainer {
+    position: relative;
+    width: 400px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    display: block;
+    max-width: 400px;
+    justify-content: center;
+}
