--- a/index.css
+++ b/index.css
@@ -49,6 +49,33 @@ canvas {
     font-size: 32px;
 }
 
+h1 {
+    font-size: 3rem;
+    margin: 0;
+    padding: 0;
+    color: #ffffff;
+    text-align: center;
+    width: 100%;
+    display: block;
+    margin: 0 auto 32px auto;
+    padding: 0;
+}
+
+.thirdContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80vw;
+    max-width: 80vw;
+    margin: 8px auto 8px auto;
+}
+
+.oneThird {
+    width: 26vw;
+    min-width: 26vh;
+    margin: 0;
+}
+
 .focusButton {
     border: 4px solid yellow;
 }
