--- a/index.css
+++ b/index.css
@@ -79,6 +79,18 @@ h1 {
     padding: 0;
 }
 
+.ordiv {
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+    color: #ffffff;
+    text-align: center;
+    width: 100%;
+    display: block;
+    margin: 0 auto 0 auto;
+    padding: 0;
+}
+
 .thirdContainer {
     display: flex;
     flex-direction: row;
@@ -200,4 +212,8 @@ input[type="range"] {
     display: block;
     max-width: 400px;
     justify-content: center;
+}
+
+.invisible {
+    display: none;
 }
